samples/_failures_safe/1761494553_98ac00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35480b17.c: In function ‘main’:
./samples/SAFE/__tmp_35480b17.c:144:12: error: missing terminating " character
  144 |     printf("\nTesting
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_35480b17.c:144:5: error: expected expression at end of input
  144 |     printf("\nTesting
      |     ^~~~~~
./samples/SAFE/__tmp_35480b17.c:144:5: error: expected declaration or statement at end of input
